# tauri-vue3-template

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: components.md
src/: App.vue  main.js  styles.css
src-tauri/: .env  Cargo.toml  database.db  tauri.conf.json
src-tauri/src/: backend.rs  database.rs  main.rs  setup.rs  utils.rs
src/assets/icons/: svgIcon.vue
src/components/: test.vue
src/components/animation/: slide.vue
src/components/button/: iconButton.vue  selectButton.vue  tagButton.vue  textButton.vue
src/components/card/: codeCard.vue
src/components/checkbox/: twoCheckbox.vue
src/components/demo/: buttons.vue  cards.vue  checkboxs.vue  home.vue  icons.vue  index.vue  inputs.vue  menus.vue  messages.vue  radios.vue  selects.vue  setting.vue  sliders.vue  switchs.vue  tables.vue
src/components/dialog/: customizeDialog.vue
src/components/input/: textInput.vue
src/components/menu/: itemMenu.vue  listMenu.vue  verticalMenu.vue
src/components/notification/: index.js
src/components/notification/src/: icon.js  message.js  message.vue  messageBox.vue
src/components/radio/: navigationRadio.vue  radio.vue
src/components/select/: textSelect.vue
src/components/slider/: slider.vue
src/components/switch/: toggleSwitch.vue
src/components/table/: customizeTable.vue
src/layout/_partial/: header.vue
src/stores/: theme.js
