[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "macos-private-api", "window-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.4.3"
window-shadows = "0.2.1"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
dotenv="0.15.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
